# funda-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
funda_tracker/: funda.py  utils.py
fundatracker/: funda.py
