[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "funda_tracker"
version = "0.0.0"
description = ""
authors = []
packages = []

[tool.poetry.dependencies]
python = ">=3.9"
duckdb="*"
requests="*"
xxhash="*"

[tool.poetry.dev-dependencies]
duckcli="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
